# pastry-0.1

./: Cargo.toml  README.md  index.html  jwt_secret.key  pastes.db  secret.key
src/: jws.rs  main.rs  models.rs  state.rs
src/common/: constants.rs  error.rs  mod.rs  prelude.rs  utils.rs
src/handlers/: dashboard.rs  mod.rs  paste.rs  profile.rs  user.rs
static/css/: style.css  user.css
static/js/: main.js  theme.js
templates/: 404.html  _theme_toggle.html  base.html  dashboard.html
templates/admin/: users.html
templates/paste/: edit_paste.html  paste.html  paste_form.html
templates/user/: edit_profile.html  login.html  profile.html  register.html  register_success.html
