[package]
name = "pastry_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.6"
actix-redis = "0.13.1"
actix-session = { version = "0.10.1", features = ["redis-session"] }
actix-web = "4.11.0"
ammonia = "4.1.0"
anyhow = "1.0.98"
bcrypt = "0.17.0"
chrono =  { version = "0.4.41", features = ["serde"] }
env_logger = "0.11.8"
jsonwebtoken = "9.3.1"
log = "0.4.27"
r2d2 = "0.8.10"
r2d2_sqlite = "0.30.0"
rand = "0.8.5"
redis = { version= "0.32.0", features = ["tokio-comp"] }
rusqlite = { version = "0.36.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tera = "1.20.0"
thiserror = "2.0.12"
uuid = "1.17.0"
